{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 37,
  "lineage": "66fab764-c66e-f44d-c1b6-8345a661a2a8",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "Default network for the project",
            "id": "projects/thinking-seer-464009-e2/global/networks/default",
            "name": "default",
            "network_id": 4216807376842816426,
            "numeric_id": "4216807376842816426",
            "self_link": "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/global/networks/default",
            "subnetworks_self_links": [
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/us-east5/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/europe-west6/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/europe-west9/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/europe-north2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/europe-west4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/me-central1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/europe-west2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/asia-southeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/us-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/me-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/us-west4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/asia-northeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/europe-southwest1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/europe-central2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/us-east4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/europe-west10/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/asia-southeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/europe-north1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/southamerica-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/northamerica-northeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/us-west2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/australia-southeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/europe-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/europe-west8/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/asia-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/northamerica-northeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/australia-southeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/asia-northeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/us-west3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/us-central1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/europe-west3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/asia-northeast3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/us-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/southamerica-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/asia-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/northamerica-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/europe-west12/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/asia-south2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/africa-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/us-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/asia-east2/subnetworks/default"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-06-25T07:55:31.283-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/thinking-seer-464009-e2/global/firewalls/allow-egress",
            "log_config": [],
            "name": "allow-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/global/networks/default",
            "priority": 1000,
            "project": "thinking-seer-464009-e2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/global/firewalls/allow-egress",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-egress"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ingress_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-25T07:55:31.265-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/thinking-seer-464009-e2/global/firewalls/allow-ingress-app",
            "log_config": [],
            "name": "allow-ingress-app",
            "network": "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/global/networks/default",
            "priority": 1000,
            "project": "thinking-seer-464009-e2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/global/firewalls/allow-ingress-app",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-app"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-25T07:55:32.332-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/thinking-seer-464009-e2/global/firewalls/allow-ingress-http",
            "log_config": [],
            "name": "allow-ingress-http",
            "network": "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/global/networks/default",
            "priority": 1000,
            "project": "thinking-seer-464009-e2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/global/firewalls/allow-ingress-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ingress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-25T07:55:31.155-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/thinking-seer-464009-e2/global/firewalls/allow-ingress-ssh",
            "log_config": [],
            "name": "allow-ingress-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/global/networks/default",
            "priority": 1000,
            "project": "thinking-seer-464009-e2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/global/firewalls/allow-ingress-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "my_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250722",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/zones/europe-west2-a/disks/animikha-vm-2407251539"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-07-24T07:44:44.371-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/thinking-seer-464009-e2/zones/europe-west2-a/instances/animikha-vm-2407251539",
            "instance_id": "420793840424712243",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "Dat_JHk65IE=",
            "metadata_startup_script": "#!/bin/bash\nexec \u003e /var/log/startup-script.log 2\u003e\u00261\nset -x\n\nsudo apt-get update\nsudo apt-get install nginx -y\nsudo systemctl start nginx\nsudo systemctl enable nginx\n\necho \"\u003ch1\u003e Terraform \u003c/h1\u003e\" | sudo tee /var/www/html/index.html",
            "name": "animikha-vm-2407251539",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.197.203.250",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/global/networks/default",
                "network_ip": "10.154.0.9",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/regions/europe-west2/subnetworks/default",
                "subnetwork_project": "thinking-seer-464009-e2"
              }
            ],
            "project": "thinking-seer-464009-e2",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/thinking-seer-464009-e2/zones/europe-west2-a/instances/animikha-vm-2407251539",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-app",
              "allow-egress",
              "allow-http",
              "allow-ssh"
            ],
            "tags_fingerprint": "u2l06S4LKsQ=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west2-a"
          },
          "dependencies": [
            "data.google_compute_network.default"
          ]
        }
      ]
    }
  ]
}